--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,18 @@
 name: Pre-generate AI Summaries
 on:
   schedule:
-    - cron: '*/15 * * * *' # Every 15 minutes
-  workflow_dispatch: # Allows manual trigger
+    - cron: '*/15 * * * *'
+  workflow_dispatch:
+
+permissions:
+  contents: write  # Crucial: Allows the script to push JSON files back to repo
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    concurrency: 
+      group: summarizer-group
+      cancel-in-progress: true
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -17,7 +23,9 @@ jobs:
           python-version: '3.11'
 
       - name: Install Dependencies
-        run: pip install feedparser requests beautifulsoup4 google-generativeai
+        run: |
+          python -m pip install --upgrade pip
+          pip install feedparser requests beautifulsoup4 google-genai
 
       - name: Run Summarizer
         env:
@@ -28,6 +36,17 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add summaries/*.json processed_articles.json
-          git commit -m "Add new AI summaries" || exit 0
-          git push
+          
+          # Ensure folders exist
+          mkdir -p summaries
+          
+          # Stage changes
+          git add summaries/*.json processed_articles.json || true
+          
+          # Check for changes and commit
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m "Update AI summaries (Gemini 3 Flash)"
+            git push
+          else
+            echo "No changes to commit"
+          fi
